# pymbs

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  branches.txt  pyrightconfig.json  requirements.txt  setup.py
.zed/: tasks.json
doc/: conf.py  index.rst
doc/architecture/: analysis.rst  index.rst  output.rst  simulation.rst
doc/developer/: index.rst
doc/devnotes/: index.rst
doc/examples/: fourbar_linkage.rst  index.rst  inverted_pendulum.rst  mass_spring_damper.rst  rope.rst  simple_pendulum.rst
doc/mathematics/: mathematics.rst
doc/preamble/: about.rst
doc/reference/: code.rst  equations.rst  general.rst  index.rst  loads.rst  loops.rst  pytrajectory_interaction.rst  sensors.rst  visualisation.rst
doc/source/: conf.py
doc/started/: started.rst
doc/trouble/: troubleshooting.rst
doc/workshop/: BaggerArm.py  BaggerArmDaten.ppt  PyMbsWorkshop.ppt
examples/: belt.py  bouncing_ball.py  fourbar_linkage.py  fourbarlinkage.py  mass_spring_damper.py  massspringdamper.py  pendulum_get_equations.py  rope.py  simple_pendulum.py  test_examples.py
examples/codegen/: coupled_pendulum.py  excavator.py  free_body.py
examples/fixme/: car.py  crane_crab.py  crane_crab_cpp.py  crane_crab_dae.py  crank_slider.py  double_pendulum.py  double_pendulum_constraint.py  fixed_joint.py  flex_double_pendulum.py  four_fourbar_linkage.py  fourbar_linkage_rz.py  free_body.py  pendulum_dae.py  rod.py  rope.py  rope_3d.py  single_pendulum.py  steering.py  test_examples.py  threebar_linkage_trans_ry.py  trans_acc.py  truck.py  (+4 more)
pymbs/: __init__.py
symbolics/: Basic.cpp  BinaryOp.cpp  Bool.cpp  CMakeLists.txt  Eye.cpp  Factory.cpp  Filesystem.cpp  Int.cpp  Matrix.cpp  NaryOp.cpp  Neg.cpp  Real.cpp  Shape.cpp  Symbol.cpp  SymmetricMatrix.cpp  UnaryOp.cpp  Zero.cpp  str.cpp
symbolics/functions/: Abs.cpp  Acos.cpp  Add.cpp  Asin.cpp  Atan.cpp  Atan2.cpp  CMakeLists.txt  Cos.cpp  Der.cpp  Element.cpp  Equal.cpp  Greater.cpp  If.cpp  Inverse.cpp  Jacobian.cpp  Less.cpp  List.cpp  Mul.cpp  Neg.cpp  Operators.cpp  Outer.cpp  Pow.cpp  Scalar.cpp  Sign.cpp  Sin.cpp  Skew.cpp  Solve.cpp  Tan.cpp  Transpose.cpp  Unknown.cpp  Util.cpp
symbolics/functions/include/: Abs.h  Acos.h  Add.h  Asin.h  Atan.h  Atan2.h  Cos.h  Der.h  Element.h  Equal.h  Greater.h  If.h  Inverse.h  Jacobian.h  Less.h  List.h  Mul.h  Neg.h  Operators.h  Outer.h  Pow.h  Scalar.h  Sign.h  Sin.h  Skew.h  Solve.h  Tan.h  Transpose.h  Unknown.h  Util.h
symbolics/functions/test/: CMakeLists.txt  main.cpp  test_abs.cpp  test_acos.cpp  test_add.cpp  test_asin.cpp  test_atan.cpp  test_atan2.cpp  test_cos.cpp  test_der.cpp  test_element.cpp  test_equal.cpp  test_greater.cpp  test_if.cpp  test_jacobian.cpp  test_less.cpp  test_mul.cpp  test_neg.cpp  test_outer.cpp  test_pow.cpp  test_scalar.cpp  test_sign.cpp  test_sin.cpp  test_skew.cpp  test_solve.cpp  test_tan.cpp  test_transpose.cpp  test_unknown.cpp
symbolics/functions/test/include/: test_abs.h  test_acos.h  test_add.h  test_asin.h  test_atan.h  test_atan2.h  test_cos.h  test_der.h  test_element.h  test_equal.h  test_greater.h  test_if.h  test_jacobian.h  test_less.h  test_mul.h  test_neg.h  test_outer.h  test_pow.h  test_scalar.h  test_sign.h  test_sin.h  test_skew.h  test_solve.h  test_tan.h  test_transpose.h  test_unknown.h
symbolics/graph/: Assignments.cpp  CMakeLists.txt  Equation.cpp  EquationSystem.cpp  Graph.cpp  MatchedSystem.cpp  Node.cpp  PastOptimisation.cpp  PreOptimisation.cpp  UnMatchedSystem.cpp
symbolics/graph/include/: Assignments.h  Equation.h  EquationSystem.h  Graph.h  MatchedSystem.h  Node.h  PastOptimisation.h  PreOptimisation.h  SystemHandler.h  UnMatchedSystem.h
symbolics/graph/test/: CMakeLists.txt  equationsystem.cpp  graph.cpp
symbolics/include/: Basic.h  BinaryOp.h  Bool.h  Error.h  Eye.h  Factory.h  Filesystem.h  Int.h  Matrix.h  NaryOp.h  Real.h  Shape.h  Symbol.h  Symbolics.h  SymmetricMatrix.h  UnaryOp.h  Zero.h  intrusive_ptr.h  str.h
symbolics/printer/: CMakeLists.txt  CPrinter.cpp  CSharpPrinter.cpp  FMUPrinter.cpp  FortranPrinter.cpp  MatlabPrinter.cpp  MatlabSymPrinter.cpp  ModelicaPrinter.cpp  Printer.cpp  PythonPrinter.cpp
symbolics/printer/include/: CPrinter.h  CSharpPrinter.h  FMUPrinter.h  FortranPrinter.h  MatlabPrinter.h  MatlabSymPrinter.h  ModelicaPrinter.h  Printer.h  PythonPrinter.h
symbolics/printer/test/: CMakeLists.txt  FMU.cpp  c.cpp  fortran.cpp  main.cpp  matlab.cpp  matlabsym.cpp  modelica.cpp  python.cpp
symbolics/test/: CMakeLists.txt  complexity.cpp  complexity.h  constant.cpp  main.cpp  matrix.cpp  shape.cpp  simplify.cpp  subs.cpp  symbol.cpp  symmetricmatrix.cpp  util.cpp
symbolics/wrapper/: CAcos.cpp  CAsin.cpp  CAssignment.cpp  CAtan.cpp  CAtan2.cpp  CBasic.cpp  CCos.cpp  CDer.cpp  CElement.cpp  CEqual.cpp  CEye.cpp  CGraph.cpp  CGreater.cpp  CIf.cpp  CInverse.cpp  CJacobian.cpp  CLess.cpp  CMakeLists.txt  CMatrix.cpp  CNumber.cpp  COuter.cpp  CScalar.cpp  CSign.cpp  CSin.cpp  CSkew.cpp  CSolve.cpp  CSymbol.cpp  CTan.cpp  CTranspose.cpp  CZeros.cpp  PyFactory.cpp  PySymbolics.cpp  Symbolics.def  SymbolicsError.cpp  convert.cpp
symbolics/wrapper/include/: CAcos.h  CAsin.h  CAssignment.h  CAtan.h  CAtan2.h  CBasic.h  CCos.h  CDer.h  CElement.h  CEqual.h  CEye.h  CGraph.h  CGreater.h  CIf.h  CInverse.h  CJacobian.h  CLess.h  CMatrix.h  CNumber.h  COuter.h  CScalar.h  CSign.h  CSin.h  CSkew.h  CSolve.h  CSymbol.h  CTan.h  CTranspose.h  CZeros.h  PyFactory.h  PySymbolics.h  SymbolicsError.h  convert.h
symbolics/writer/: CMakeLists.txt  CSharpWriter.cpp  CWriter.cpp  FMUWriter.cpp  FortranWriter.cpp  MatlabWriter.cpp  ModelicaWriter.cpp  PythonWriter.cpp  Writer.cpp
symbolics/writer/include/: CSharpWriter.h  CWriter.h  FMUWriter.h  FortranWriter.h  MatlabWriter.h  ModelicaWriter.h  PythonWriter.h  Writer.h
symbolics/writer/lib/: lib_xml_writer.h
symbolics/writer/test/: CMakeLists.txt  pendulum.h  writers.cpp
test/: csharp_export.py  eqnsyscompare.py  hello_pymbs.py  nonlinear_eqsystem.py  test.py  test_frames.py  test_input.py  test_symbolics.py  test_trig.py
util/: sympy_export.py
(+167 files in other folders)
